Fix project spacing and photos

--- a/client/src/styles/Project.css
+++ b/client/src/styles/Project.css
@@ -1,10 +1,11 @@
 .project-container {
-  width: 400px;
+  width: 25vw;
+  flex-grow: 1;
 }
 
 .project-img {
   object-fit: cover;
-  max-height: 230px;
+  height: auto;
   border-radius: 10px;
 }
 
